# pbg-mem3dg

./: .gitignore  README.md  publish.sh  pyproject.toml
demo/: composite_report.py  demo_report.py
pbg_mem3dg/: __init__.py  composites.py  processes.py  types.py  visualizations.py
pbg_mem3dg/composites/: __init__.py  membrane-demo-with-viz.composite.yaml  membrane-demo.composite.yaml
tests/: test_composites.py  test_processes.py
