[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbg-mem3dg"
version = "0.1.0"
description = "Process-bigraph wrapper for Mem3DG membrane mechanics simulator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "process-bigraph>=0.0.10",
    "bigraph-schema",
    "pymem3dg>=0.0.7",
    "numpy",
    "matplotlib",
    "scipy<1.15",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["pbg_mem3dg*"]
